fixing mobile overflow

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -256,7 +256,7 @@ section {
       align-items: center;
       .projects-card {
         height: 200px;
-        width: 400px;
+        width: 300px;
         img {
           height: 100%;
         }
